# ammo-rs

./: .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.rs  cmds
include/: ammo.h
src/: ammo.cc  lib.rs
